    should still apply, although the CSS path may need to change.
  * For an example of the new output format see
    `table_cls_step_1_start_1_special_0_noanchor_filename.html`
    in the `tests/html_linenos_expected_output/` directory.
  * For more details and discussion see the issue
    https://github.com/pygments/pygments/issues/1757

Version 2.8.0
-------------
(released February 14, 2021)

- Added lexers:

  * AMDGPU (#1626)
  * CDDL (#1379, #1239)
  * Futhark (#1691)
  * Graphviz/DOT (#1657, #731)

- Updated lexers:

  * AutoIt: Support single quoted strings (#1667, #1663)
  * C/C++ & related: Fix mishandling ``*/`` (#1695)
  * Cocoa: Add builtin types (#1703)
  * Console (#1672)
  * Eiffel: Fix performance issues (#1658)
  * Fortran: Improve combined keyword detection (#1677, #1188)
  * J: Fix operator ``?`` lexing (#1700, #1149)
  * JavaScript/TypeScript: Fix escapes in backtick strings (#1679, #1686)
  * Kotlin: Improve string interpolation, modifier keyword handling, and various small issues (#1699)
  * LESS: Support single-line comments (#1046)
  * Matlab:

    - Add support for class properties (#1466)
    - Update builtin functions (#1705)
    - Various cleanups (#1673)

  * Python: Improve handling of raw f-strings (#1681, #1683)
  * Ruby: Better method name handling (#1531)
  * Stata: Updated keywords (#1470)

- Added styles:

  * Material (#1662)
  * Zenburn (#1659)

- The `pygmentize` script now uses `argparse`, all options should work
  as before

- Add `pygmentize -C` option to guess a lexer from content

- With this release, Pygments moves to a new internal testing system (#1649.)
  See ``Contributing.md`` for details. The main advantage of this new change
  is a much better test coverage of all existing example lexers. It also makes
  it much easier to add new test snippets.
- Make guessing prefer Python 3 lexer
- Do not guess MIME or SQL without reason
- Changed setuptools to use a declarative config through ``setup.cfg``.