@@ -54,6 +54,10 @@ Version 2.9.0
   * For more details and discussion see the issue
     https://github.com/pygments/pygments/issues/1757
 
+- Added styles:
+
+  * Gruvbox light+dark (#1763)
+
 Version 2.8.0
 -------------
 (released February 14, 2021)
